--- a/manual.html
+++ b/manual.html
@@ -1,26 +1,26 @@
-<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Manual</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="/manual.html">Manual</a></li><li><a href="/getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rk222ev/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Manual</h1><div id="table-of-contents">
+<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Manual</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/immotile/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="immotile/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="/manual.html">Manual</a></li><li><a href="/getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Manual</h1><div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org8758b70">Tradeoffs</a></li>
-<li><a href="#org28dd19c">Clojure</a>
+<li><a href="#org02e0cdb">Tradeoffs</a></li>
+<li><a href="#org60c726f">Clojure</a>
 <ul>
-<li><a href="#org61f3dd5">Example .clj page</a></li>
+<li><a href="#org4976813">Example .clj page</a></li>
 </ul>
 </li>
-<li><a href="#orgdf1d7ce">Clojurescript</a></li>
-<li><a href="#org5f89b1d">Org mode</a></li>
-<li><a href="#org499200c">Posts</a></li>
-<li><a href="#org3825bff">Style</a></li>
-<li><a href="#org9126e9a">Starting the development server</a></li>
-<li><a href="#org5ade4f0">Building for production</a></li>
+<li><a href="#org2534095">Clojurescript</a></li>
+<li><a href="#orgf43b1ed">Org mode</a></li>
+<li><a href="#org7dc2a8b">Posts</a></li>
+<li><a href="#orgd22df96">Style</a></li>
+<li><a href="#orgebaa55e">Starting the development server</a></li>
+<li><a href="#org94e7623">Building for production</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org8758b70" class="outline-2">
-<h2 id="org8758b70">Tradeoffs</h2>
-<div class="outline-text-2" id="text-org8758b70">
+<div id="outline-container-org02e0cdb" class="outline-2">
+<h2 id="org02e0cdb">Tradeoffs</h2>
+<div class="outline-text-2" id="text-org02e0cdb">
 <p>
    Immotile is not quick. Using Emacs to generate html takes time. So the initial
 and production builds are slow. Hopefully that is compensated with auto- and hot reloading
@@ -30,9 +30,9 @@ changes after this.
 </div>
 
 
-<div id="outline-container-org28dd19c" class="outline-2">
-<h2 id="org28dd19c">Clojure</h2>
-<div class="outline-text-2" id="text-org28dd19c">
+<div id="outline-container-org60c726f" class="outline-2">
+<h2 id="org60c726f">Clojure</h2>
+<div class="outline-text-2" id="text-org60c726f">
 <p>
    Used by naminghe a file <code>.clj</code>. Works just like regular Clojure. Require any additional
 dependencies from the classpath with: <code>(require '[clojure.string :as str])</code>.
@@ -41,9 +41,9 @@ hiccup.
 </p>
 </div>
 
-<div id="outline-container-org61f3dd5" class="outline-3">
-<h3 id="org61f3dd5">Example .clj page</h3>
-<div class="outline-text-3" id="text-org61f3dd5">
+<div id="outline-container-org4976813" class="outline-3">
+<h3 id="org4976813">Example .clj page</h3>
+<div class="outline-text-3" id="text-org4976813">
 <pre class="example">
 # (require '[clojure.string :as str])
 (fn [data]
@@ -57,9 +57,9 @@ hiccup.
 </div>
 
 
-<div id="outline-container-orgdf1d7ce" class="outline-2">
-<h2 id="orgdf1d7ce">Clojurescript</h2>
-<div class="outline-text-2" id="text-orgdf1d7ce">
+<div id="outline-container-org2534095" class="outline-2">
+<h2 id="org2534095">Clojurescript</h2>
+<div class="outline-text-2" id="text-org2534095">
 <p>
    Place your Clojurescript source files inside the cljs folder inside the folder chosen as <code>:out</code> in
 the config.
@@ -80,9 +80,9 @@ Otherwise Clojurescript works as usual.
 </div>
 
 
-<div id="outline-container-org5f89b1d" class="outline-2">
-<h2 id="org5f89b1d">Org mode</h2>
-<div class="outline-text-2" id="text-org5f89b1d">
+<div id="outline-container-orgf43b1ed" class="outline-2">
+<h2 id="orgf43b1ed">Org mode</h2>
+<div class="outline-text-2" id="text-orgf43b1ed">
 <p>
    Files are generated using Emacs so it needs to be on your <code>$Path</code>. Should support all the
 usual org mode functionality that's available when exporting from Emacs.
@@ -93,9 +93,9 @@ of the rest of the website.
 </div>
 
 
-<div id="outline-container-org499200c" class="outline-2">
-<h2 id="org499200c">Posts</h2>
-<div class="outline-text-2" id="text-org499200c">
+<div id="outline-container-org7dc2a8b" class="outline-2">
+<h2 id="org7dc2a8b">Posts</h2>
+<div class="outline-text-2" id="text-org7dc2a8b">
 <p>
 Needs to have a date and a title attached to the meta. Should return the following:
 </p>
@@ -108,9 +108,9 @@ Needs to have a date and a title attached to the meta. Should return the followi
 </div>
 
 
-<div id="outline-container-org3825bff" class="outline-2">
-<h2 id="org3825bff">Style</h2>
-<div class="outline-text-2" id="text-org3825bff">
+<div id="outline-container-orgd22df96" class="outline-2">
+<h2 id="orgd22df96">Style</h2>
+<div class="outline-text-2" id="text-orgd22df96">
 <p>
 Add a <code>.css</code> file to the <code>source/public</code> folder, will be moved to the root of the build.
 </p>
@@ -122,9 +122,9 @@ Add a <code>.css</code> file to the <code>source/public</code> folder, will be m
 </div>
 
 
-<div id="outline-container-org9126e9a" class="outline-2">
-<h2 id="org9126e9a">Starting the development server</h2>
-<div class="outline-text-2" id="text-org9126e9a">
+<div id="outline-container-orgebaa55e" class="outline-2">
+<h2 id="orgebaa55e">Starting the development server</h2>
+<div class="outline-text-2" id="text-orgebaa55e">
 <p>
 Invoke immotile.core/-main with <code>dev</code> as the argument.
 </p>
@@ -139,9 +139,9 @@ $ clj -J--add-modules -Jjava.xml.bind -m immotile.core dev
 </div>
 
 
-<div id="outline-container-org5ade4f0" class="outline-2">
-<h2 id="org5ade4f0">Building for production</h2>
-<div class="outline-text-2" id="text-org5ade4f0">
+<div id="outline-container-org94e7623" class="outline-2">
+<h2 id="org94e7623">Building for production</h2>
+<div class="outline-text-2" id="text-org94e7623">
 <p>
 Invoke immotile.core/-main with <code>build-prod</code> as the argument.
 </p>
@@ -154,4 +154,4 @@ $ clj -J--add-modules -Jjava.xml.bind -m immotile.core build-prod
 </pre>
 </div>
 </div>
-<script src="/js/example.js"></script></div></body></html>
+<script src="/immotile/js/example.js"></script></div></body></html>
