--- a/getting-started.html
+++ b/getting-started.html
@@ -1,37 +1,37 @@
-<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Getting Started</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/immotile/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="immotile/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="/manual.html">Manual</a></li><li><a href="/getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Getting Started</h1><div id="table-of-contents">
+<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="font-src https://cdn.rawgit.com;" http-equiv="content-security-policy" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Getting Started</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="immotile/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="/manual.html">Manual</a></li><li><a href="/getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Getting Started</h1><div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc6ffeea">Deps.edn</a></li>
-<li><a href="#orga48fe23">Source files</a></li>
-<li><a href="#org2065d21">Clojurescript</a></li>
-<li><a href="#org05a85bd">Suggested workflow</a></li>
-<li><a href="#orgf2ffacd">Building for production</a></li>
+<li><a href="#org9d6353f">Deps.edn</a></li>
+<li><a href="#org750134b">Source files</a></li>
+<li><a href="#org63403a1">Clojurescript</a></li>
+<li><a href="#orgca637ea">Suggested workflow</a></li>
+<li><a href="#org798645b">Building for production</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgc6ffeea" class="outline-2">
-<h2 id="orgc6ffeea">Deps.edn</h2>
+<div id="outline-container-org9d6353f" class="outline-2">
+<h2 id="org9d6353f">Deps.edn</h2>
 </div>
 
 
-<div id="outline-container-orga48fe23" class="outline-2">
-<h2 id="orga48fe23">Source files</h2>
+<div id="outline-container-org750134b" class="outline-2">
+<h2 id="org750134b">Source files</h2>
 </div>
 
 
-<div id="outline-container-org2065d21" class="outline-2">
-<h2 id="org2065d21">Clojurescript</h2>
+<div id="outline-container-org63403a1" class="outline-2">
+<h2 id="org63403a1">Clojurescript</h2>
 </div>
 
 
-<div id="outline-container-org05a85bd" class="outline-2">
-<h2 id="org05a85bd">Suggested workflow</h2>
+<div id="outline-container-orgca637ea" class="outline-2">
+<h2 id="orgca637ea">Suggested workflow</h2>
 </div>
 
 
-<div id="outline-container-orgf2ffacd" class="outline-2">
-<h2 id="orgf2ffacd">Building for production</h2>
+<div id="outline-container-org798645b" class="outline-2">
+<h2 id="org798645b">Building for production</h2>
 </div>
 <script src="/immotile/js/example.js"></script></div></body></html>
