--- a/getting-started.html
+++ b/getting-started.html
@@ -1,37 +1,37 @@
-<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="font-src https://cdn.rawgit.com;" http-equiv="content-security-policy" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Getting Started</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/immotile/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="immotile/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="/manual.html">Manual</a></li><li><a href="/getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Getting Started</h1><div id="table-of-contents">
+<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="font-src https://cdn.rawgit.com; script-src &apos;self&apos;" http-equiv="content-security-policy" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Getting Started</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/immotile/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="immotile/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="/manual.html">Manual</a></li><li><a href="/getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Getting Started</h1><div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org97ced17">Deps.edn</a></li>
-<li><a href="#org2f13d23">Source files</a></li>
-<li><a href="#org0443819">Clojurescript</a></li>
-<li><a href="#orgc604124">Suggested workflow</a></li>
-<li><a href="#orga215466">Building for production</a></li>
+<li><a href="#org51f5028">Deps.edn</a></li>
+<li><a href="#org5d6af1c">Source files</a></li>
+<li><a href="#org969eaec">Clojurescript</a></li>
+<li><a href="#org861c470">Suggested workflow</a></li>
+<li><a href="#orgdb264a9">Building for production</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org97ced17" class="outline-2">
-<h2 id="org97ced17">Deps.edn</h2>
+<div id="outline-container-org51f5028" class="outline-2">
+<h2 id="org51f5028">Deps.edn</h2>
 </div>
 
 
-<div id="outline-container-org2f13d23" class="outline-2">
-<h2 id="org2f13d23">Source files</h2>
+<div id="outline-container-org5d6af1c" class="outline-2">
+<h2 id="org5d6af1c">Source files</h2>
 </div>
 
 
-<div id="outline-container-org0443819" class="outline-2">
-<h2 id="org0443819">Clojurescript</h2>
+<div id="outline-container-org969eaec" class="outline-2">
+<h2 id="org969eaec">Clojurescript</h2>
 </div>
 
 
-<div id="outline-container-orgc604124" class="outline-2">
-<h2 id="orgc604124">Suggested workflow</h2>
+<div id="outline-container-org861c470" class="outline-2">
+<h2 id="org861c470">Suggested workflow</h2>
 </div>
 
 
-<div id="outline-container-orga215466" class="outline-2">
-<h2 id="orga215466">Building for production</h2>
+<div id="outline-container-orgdb264a9" class="outline-2">
+<h2 id="orgdb264a9">Building for production</h2>
 </div>
 <script src="/immotile/js/example.js"></script></div></body></html>
