--- a/getting-started.html
+++ b/getting-started.html
@@ -1,37 +1,37 @@
-<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="default-src https:; font-src https://cdn.rawgit.com; script-src &apos;self&apos;" http-equiv="Content-Security-Policy" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Getting Started</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/immotile/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="immotile/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="manual.html">Manual</a></li><li><a href="getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Getting Started</h1><div id="table-of-contents">
+<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="default-src https:; font-src https://cdn.rawgit.com; script-src &apos;self&apos;" http-equiv="Content-Security-Policy" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Getting Started</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="manual.html">Manual</a></li><li><a href="getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Getting Started</h1><div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb3a8c86">Deps.edn</a></li>
-<li><a href="#orgf50d13b">Source files</a></li>
-<li><a href="#orgd1ebe16">Clojurescript</a></li>
-<li><a href="#org3fd7e0a">Suggested workflow</a></li>
-<li><a href="#org6c25715">Building for production</a></li>
+<li><a href="#orgcd76a8d">Deps.edn</a></li>
+<li><a href="#org4729487">Source files</a></li>
+<li><a href="#orgd4f44c8">Clojurescript</a></li>
+<li><a href="#orga01cd04">Suggested workflow</a></li>
+<li><a href="#orgc24fc9c">Building for production</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgb3a8c86" class="outline-2">
-<h2 id="orgb3a8c86">Deps.edn</h2>
+<div id="outline-container-orgcd76a8d" class="outline-2">
+<h2 id="orgcd76a8d">Deps.edn</h2>
 </div>
 
 
-<div id="outline-container-orgf50d13b" class="outline-2">
-<h2 id="orgf50d13b">Source files</h2>
+<div id="outline-container-org4729487" class="outline-2">
+<h2 id="org4729487">Source files</h2>
 </div>
 
 
-<div id="outline-container-orgd1ebe16" class="outline-2">
-<h2 id="orgd1ebe16">Clojurescript</h2>
+<div id="outline-container-orgd4f44c8" class="outline-2">
+<h2 id="orgd4f44c8">Clojurescript</h2>
 </div>
 
 
-<div id="outline-container-org3fd7e0a" class="outline-2">
-<h2 id="org3fd7e0a">Suggested workflow</h2>
+<div id="outline-container-orga01cd04" class="outline-2">
+<h2 id="orga01cd04">Suggested workflow</h2>
 </div>
 
 
-<div id="outline-container-org6c25715" class="outline-2">
-<h2 id="org6c25715">Building for production</h2>
+<div id="outline-container-orgc24fc9c" class="outline-2">
+<h2 id="orgc24fc9c">Building for production</h2>
 </div>
-<script src="/immotile/js/example.js"></script></div></body></html>
+<script src="js/example.js"></script></div></body></html>
