--- a/getting-started.html
+++ b/getting-started.html
@@ -1,37 +1,37 @@
-<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Getting Started</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="manual.html">Manual</a></li><li><a href="getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Getting Started</h1><div id="table-of-contents">
+<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Getting Started</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/immotile/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="/immotile/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="/immotile/manual.html">Manual</a></li><li><a href="/immotile/getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Getting Started</h1><div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org2377978">Deps.edn</a></li>
-<li><a href="#orgbad8ee0">Source files</a></li>
-<li><a href="#org400821e">Clojurescript</a></li>
-<li><a href="#org0a4689d">Suggested workflow</a></li>
-<li><a href="#orgb19b45e">Building for production</a></li>
+<li><a href="#org3b34c30">Deps.edn</a></li>
+<li><a href="#orgfb33cb6">Source files</a></li>
+<li><a href="#orgbc34ef9">Clojurescript</a></li>
+<li><a href="#org371a438">Suggested workflow</a></li>
+<li><a href="#orgf3cb40b">Building for production</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org2377978" class="outline-2">
-<h2 id="org2377978">Deps.edn</h2>
+<div id="outline-container-org3b34c30" class="outline-2">
+<h2 id="org3b34c30">Deps.edn</h2>
 </div>
 
 
-<div id="outline-container-orgbad8ee0" class="outline-2">
-<h2 id="orgbad8ee0">Source files</h2>
+<div id="outline-container-orgfb33cb6" class="outline-2">
+<h2 id="orgfb33cb6">Source files</h2>
 </div>
 
 
-<div id="outline-container-org400821e" class="outline-2">
-<h2 id="org400821e">Clojurescript</h2>
+<div id="outline-container-orgbc34ef9" class="outline-2">
+<h2 id="orgbc34ef9">Clojurescript</h2>
 </div>
 
 
-<div id="outline-container-org0a4689d" class="outline-2">
-<h2 id="org0a4689d">Suggested workflow</h2>
+<div id="outline-container-org371a438" class="outline-2">
+<h2 id="org371a438">Suggested workflow</h2>
 </div>
 
 
-<div id="outline-container-orgb19b45e" class="outline-2">
-<h2 id="orgb19b45e">Building for production</h2>
+<div id="outline-container-orgf3cb40b" class="outline-2">
+<h2 id="orgf3cb40b">Building for production</h2>
 </div>
-<script src="js/example.js"></script></div></body></html>
+<script src="/immotile/js/example.js"></script></div></body></html>
