--- a/manual.html
+++ b/manual.html
@@ -1,26 +1,26 @@
-<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Manual</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="manual.html">Manual</a></li><li><a href="getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Manual</h1><div id="table-of-contents">
+<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Manual</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/immotile/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="/immotile/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="/immotile/manual.html">Manual</a></li><li><a href="/immotile/getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Manual</h1><div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orga391166">Tradeoffs</a></li>
-<li><a href="#orge83ab54">Clojure</a>
+<li><a href="#orgd700edf">Tradeoffs</a></li>
+<li><a href="#orge10d154">Clojure</a>
 <ul>
-<li><a href="#org8927b05">Example .clj page</a></li>
+<li><a href="#orgaf6c208">Example .clj page</a></li>
 </ul>
 </li>
-<li><a href="#org66dc1ba">Clojurescript</a></li>
-<li><a href="#orgb2d6c62">Org mode</a></li>
-<li><a href="#org5770504">Posts</a></li>
-<li><a href="#orge53ea54">Style</a></li>
-<li><a href="#orgd38afb1">Starting the development server</a></li>
-<li><a href="#org959cdfd">Building for production</a></li>
+<li><a href="#orgb15110e">Clojurescript</a></li>
+<li><a href="#orgea02bce">Org mode</a></li>
+<li><a href="#org3ffec0d">Posts</a></li>
+<li><a href="#org09860c8">Style</a></li>
+<li><a href="#org7588f4c">Starting the development server</a></li>
+<li><a href="#org42f4ae2">Building for production</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orga391166" class="outline-2">
-<h2 id="orga391166">Tradeoffs</h2>
-<div class="outline-text-2" id="text-orga391166">
+<div id="outline-container-orgd700edf" class="outline-2">
+<h2 id="orgd700edf">Tradeoffs</h2>
+<div class="outline-text-2" id="text-orgd700edf">
 <p>
    Immotile is not quick. Using Emacs to generate html takes time. So the initial
 and production builds are slow. Hopefully that is compensated with auto- and hot reloading
@@ -30,9 +30,9 @@ changes after this.
 </div>
 
 
-<div id="outline-container-orge83ab54" class="outline-2">
-<h2 id="orge83ab54">Clojure</h2>
-<div class="outline-text-2" id="text-orge83ab54">
+<div id="outline-container-orge10d154" class="outline-2">
+<h2 id="orge10d154">Clojure</h2>
+<div class="outline-text-2" id="text-orge10d154">
 <p>
    Used by naminghe a file <code>.clj</code>. Works just like regular Clojure. Require any additional
 dependencies from the classpath with: <code>(require '[clojure.string :as str])</code>.
@@ -41,9 +41,9 @@ hiccup.
 </p>
 </div>
 
-<div id="outline-container-org8927b05" class="outline-3">
-<h3 id="org8927b05">Example .clj page</h3>
-<div class="outline-text-3" id="text-org8927b05">
+<div id="outline-container-orgaf6c208" class="outline-3">
+<h3 id="orgaf6c208">Example .clj page</h3>
+<div class="outline-text-3" id="text-orgaf6c208">
 <pre class="example">
 # (require '[clojure.string :as str])
 (fn [data]
@@ -57,9 +57,9 @@ hiccup.
 </div>
 
 
-<div id="outline-container-org66dc1ba" class="outline-2">
-<h2 id="org66dc1ba">Clojurescript</h2>
-<div class="outline-text-2" id="text-org66dc1ba">
+<div id="outline-container-orgb15110e" class="outline-2">
+<h2 id="orgb15110e">Clojurescript</h2>
+<div class="outline-text-2" id="text-orgb15110e">
 <p>
    Place your Clojurescript source files inside the cljs folder inside the folder chosen as <code>:out</code> in
 the config.
@@ -80,9 +80,9 @@ Otherwise Clojurescript works as usual.
 </div>
 
 
-<div id="outline-container-orgb2d6c62" class="outline-2">
-<h2 id="orgb2d6c62">Org mode</h2>
-<div class="outline-text-2" id="text-orgb2d6c62">
+<div id="outline-container-orgea02bce" class="outline-2">
+<h2 id="orgea02bce">Org mode</h2>
+<div class="outline-text-2" id="text-orgea02bce">
 <p>
    Files are generated using Emacs so it needs to be on your <code>$Path</code>. Should support all the
 usual org mode functionality that's available when exporting from Emacs.
@@ -93,9 +93,9 @@ of the rest of the website.
 </div>
 
 
-<div id="outline-container-org5770504" class="outline-2">
-<h2 id="org5770504">Posts</h2>
-<div class="outline-text-2" id="text-org5770504">
+<div id="outline-container-org3ffec0d" class="outline-2">
+<h2 id="org3ffec0d">Posts</h2>
+<div class="outline-text-2" id="text-org3ffec0d">
 <p>
 Needs to have a date and a title attached to the meta. Should return the following:
 </p>
@@ -108,9 +108,9 @@ Needs to have a date and a title attached to the meta. Should return the followi
 </div>
 
 
-<div id="outline-container-orge53ea54" class="outline-2">
-<h2 id="orge53ea54">Style</h2>
-<div class="outline-text-2" id="text-orge53ea54">
+<div id="outline-container-org09860c8" class="outline-2">
+<h2 id="org09860c8">Style</h2>
+<div class="outline-text-2" id="text-org09860c8">
 <p>
 Add a <code>.css</code> file to the <code>source/public</code> folder, will be moved to the root of the build.
 </p>
@@ -122,9 +122,9 @@ Add a <code>.css</code> file to the <code>source/public</code> folder, will be m
 </div>
 
 
-<div id="outline-container-orgd38afb1" class="outline-2">
-<h2 id="orgd38afb1">Starting the development server</h2>
-<div class="outline-text-2" id="text-orgd38afb1">
+<div id="outline-container-org7588f4c" class="outline-2">
+<h2 id="org7588f4c">Starting the development server</h2>
+<div class="outline-text-2" id="text-org7588f4c">
 <p>
 Invoke immotile.core/-main with <code>dev</code> as the argument.
 </p>
@@ -139,9 +139,9 @@ $ clj -J--add-modules -Jjava.xml.bind -m immotile.core dev
 </div>
 
 
-<div id="outline-container-org959cdfd" class="outline-2">
-<h2 id="org959cdfd">Building for production</h2>
-<div class="outline-text-2" id="text-org959cdfd">
+<div id="outline-container-org42f4ae2" class="outline-2">
+<h2 id="org42f4ae2">Building for production</h2>
+<div class="outline-text-2" id="text-org42f4ae2">
 <p>
 Invoke immotile.core/-main with <code>build-prod</code> as the argument.
 </p>
@@ -154,4 +154,4 @@ $ clj -J--add-modules -Jjava.xml.bind -m immotile.core build-prod
 </pre>
 </div>
 </div>
-<script src="js/example.js"></script></div></body></html>
+<script src="/immotile/js/example.js"></script></div></body></html>
